# chat_app

./: Cargo.toml  config.toml
src/: main.rs
src/client/: client.rs  gui.rs  mod.rs
src/common/: config.rs  logger.rs  mod.rs  types.rs
src/server/: mod.rs  peer_manager.rs  server.rs
