[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.15"
env_logger = "0.10"
log = "0.4"
egui = "0.28.1"
eframe = "0.28.1"
structopt = "0.3"
futures-util = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
chrono = "0.4.38"
config = "0.14.0"
toml = "0.8.14"
rand = "0.8.5"



